tests/baselines/reference/innerModExport2.errors.txt
tests/cases/compiler/innerModExport2.ts(5,5): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i @types/node` and then add `node` to the types field in your tsconfig.
tests/cases/compiler/innerModExport2.ts(5,12): error TS1005: ';' expected.
tests/cases/compiler/innerModExport2.ts(7,20): error TS2395: Individual declarations in merged declaration 'export_var' must be all exported or all local.
tests/cases/compiler/innerModExport2.ts(13,9): error TS2395: Individual declarations in merged declaration 'export_var' must be all exported or all local.
tests/cases/compiler/innerModExport2.ts(20,7): error TS2339: Property 'NonExportFunc' does not exist on type 'typeof Outer'.


==== tests/cases/compiler/innerModExport2.ts (5 errors) ====
    module Outer {
    
        // inner mod 1
        var non_export_var: number;
        module {
        ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i @types/node` and then add `node` to the types field in your tsconfig.
               ~
!!! error TS1005: ';' expected.
            var non_export_var = 0;
            export var export_var = 1;
                       ~~~~~~~~~~
!!! error TS2395: Individual declarations in merged declaration 'export_var' must be all exported or all local.
    
            function NonExportFunc() { return 0; }
    
            export function ExportFunc() { return 0; }
        }
        var export_var: number;
            ~~~~~~~~~~
!!! error TS2395: Individual declarations in merged declaration 'export_var' must be all exported or all local.
    
        export var outer_var_export = 0;
        export function outerFuncExport() { return 0; }
    
    }
    
    Outer.NonExportFunc();
          ~~~~~~~~~~~~~
!!! error TS2339: Property 'NonExportFunc' does not exist on type 'typeof Outer'.